k8s/mail-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mail-service
  template:
    metadata:
      labels:
        app: mail-service
    spec:
      containers:
        - name: mail-service
          image: mail-service:1.0.0
          imagePullPolicy: Never
          resources:
            requests:
              cpu: "300m"
              memory: "256Mi"
              ephemeral-storage: "1Gi"
            limits:
              cpu: "600m"
              memory: "512Mi"
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /workspace/config
      volumes:
        - name: config-volume
          configMap:
            name: microservices-config
---
apiVersion: v1
kind: Service
metadata:
  name: mail-service
spec:
  selector:
    app: mail-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
